# PokeGrade

./: .env.local.example  .gitignore  PLAN.md  README.md  next.config.ts  package-lock.json  package.json
.claude/: launch.json
docs/: production-readiness-plan-v2.md
docs/research/: README.md  competitive-landscape.md  training-data-sources.md
engine/: PROTOCOL.md  pyproject.toml  standards.json
engine/evals/: __init__.py  judge.py
engine/pokegrade/: __init__.py  adjudicate.py  app.py  calibrate.py  centering.py  cli.py  config.py  exif_validate.py  imaging.py  ledger.py  models.py  pipeline.py  provenance.py  standards.py  verdict.py
engine/tests/: conftest.py  fixtures.py  test_adjudicate.py  test_app.py  test_capture.py  test_centering.py  test_e2e.py  test_imaging.py  test_ledger.py  test_standards.py  test_verdict.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/grade/: route.ts
src/components/: analyzing.tsx  history.tsx  result.tsx  uploader.tsx
src/lib/: anthropic.ts  grading.ts  image.ts  types.ts
