[project]
name = "pokegrade"
version = "0.1.0"
description = "PokeGrade engine: deterministic centering + EV verdict + ledger + Claude soft-pillar adjudicator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "opencv-python-headless>=4.10",
    "numpy>=2.0",
    "pillow>=11.0",
    "pillow-heif>=0.18",
    "pydantic>=2.9",
    "anthropic>=0.49",
    "python-dotenv>=1.0",
]

[project.scripts]
pokegrade = "pokegrade.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pokegrade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
